ALS-3953: Fixes footer overlap issue

--- a/biodatacatalyst-ui/src/main/webapp/picsureui/overrides/styles.css
+++ b/biodatacatalyst-ui/src/main/webapp/picsureui/overrides/styles.css
@@ -24,12 +24,20 @@
 }
 /*************************/
 
+body {
+    display: flex;
+    flex-direction: column;
+    background-color: #f4f4f6;
+    font-family: 'Nunito Sans', sans-serif;
+}
+
 #main-content {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     position: relative;
     margin: 2em auto 2em 0em;
     padding-bottom: 2em;
+    flex-grow: 1;
 }
 
 #query-builder {
